# kicad-collab

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
plugin/: __init__.py  pyproject.toml
shared/schema/: comments.schema.json  components.schema.json  manifest.schema.json  types.ts
viewer/: .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
viewer/public/fixtures/: comments.json  components.json
viewer/src/: App.test.tsx  App.tsx  index.css
viewer/src/components/: AddCommentForm.test.tsx  AddCommentForm.tsx  CommentFilterDropdown.test.tsx  CommentFilterDropdown.tsx  CommentListItem.test.tsx  CommentListItem.tsx  CommentPanel.test.tsx  CommentPanel.tsx  CommentStatusBadge.test.tsx  CommentStatusBadge.tsx  CommentThread.test.tsx  CommentThread.tsx  ComponentDetailPanel.test.tsx  ComponentDetailPanel.tsx  ComponentTooltip.test.tsx  ComponentTooltip.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DeleteConfirmDialog.test.tsx  DeleteConfirmDialog.tsx  EditCommentForm.test.tsx  EditCommentForm.tsx  GeneralCommentForm.test.tsx  GeneralCommentForm.tsx  ReplyForm.test.tsx  ReplyForm.tsx  ReplyListItem.test.tsx  ReplyListItem.tsx  SchematicViewer.test.tsx  SchematicViewer.tsx
viewer/src/fixtures/: comments.json  components.json  manifest.json
viewer/src/hooks/: useAddComment.test.ts  useAddComment.ts  useAddGeneralComment.test.ts  useAddGeneralComment.ts  useCommentStatus.test.ts  useCommentStatus.ts  useComments.test.ts  useComments.ts  useComponentHover.ts  (+14 more)
(+17 files in other folders)
